--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.0.0",
+    "@angular/cdk": "^16.0.0",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
+    "@angular/material": "^16.0.0",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@cds/core": "^6.4.2",
     "@clr/angular": "^15.3.0",
+    "@clr/icons": "^13.0.2",
     "@clr/ui": "^15.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
